--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -105,8 +105,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-15T20:54:01.996705Z",
-     "start_time": "2020-01-15T20:54:01.993420Z"
+     "end_time": "2020-05-26T12:17:16.246794Z",
+     "start_time": "2020-05-26T12:17:16.243283Z"
     }
    },
    "outputs": [
@@ -352,8 +352,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-15T20:54:02.216665Z",
-     "start_time": "2020-01-15T20:54:02.207420Z"
+     "end_time": "2020-05-26T12:17:22.303913Z",
+     "start_time": "2020-05-26T12:17:22.292578Z"
     }
    },
    "outputs": [],
@@ -426,8 +426,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-15T20:54:02.235804Z",
-     "start_time": "2020-01-15T20:54:02.219244Z"
+     "end_time": "2020-05-26T12:17:23.617001Z",
+     "start_time": "2020-05-26T12:17:23.595651Z"
     }
    },
    "outputs": [],
@@ -617,8 +617,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-15T20:54:02.250444Z",
-     "start_time": "2020-01-15T20:54:02.238636Z"
+     "end_time": "2020-05-26T12:17:24.702370Z",
+     "start_time": "2020-05-26T12:17:24.691842Z"
     }
    },
    "outputs": [
@@ -774,8 +774,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-15T20:54:02.259505Z",
-     "start_time": "2020-01-15T20:54:02.252817Z"
+     "end_time": "2020-04-09T12:20:24.329031Z",
+     "start_time": "2020-04-09T12:20:24.314499Z"
     }
    },
    "outputs": [
@@ -874,7 +874,7 @@
     "(definition from Matt Spike's thesis, section 5.2.3)\n",
     "However, when languages are allowed to use forms that are longer than the number of meaning features (i.e. $l$ can be either $f$ or $2*f$), it becomes trickier to define the length of a substring. As mentioned above, there are two ways in which reduplication can be used in a compositional system. Either individual substrings are reduplicated, resulting in a language like [aaaa, aabb, bbaa, bbbb], or full signals can be reduplicated, resulting in a language like [aaaa, abab, baba, bbbb]. \n",
     "1. If we know that a given language uses the the \"reduplicate each segment\" strategy, we can check that it is compositional by dividing each form into a number of chunks that corresponds to the number of meaning features (such that if forms have length 6 and there are 2 meaning features, we get 2 chunks of length 3), and subsequently checking that each of those chunks maps uniquely onto a given meaning feature, according to the rule stated in Equation 2 above. \n",
-    "2. In contrast, if we know that a given language uses the \"reduplicat full signal\" strategy, we can check that it is compositional by dividing it up into chunks that each have a length corresponding to the number of meaning features (such that if forms have length 6 and there are 2 meaning features, we get 3 chunks of length 2), and subsequently checking that *within* the first such chunk of each form, we see that each substring *within* the chunk maps uniquely onto a given meaning feature, according to the rule stated in Equation 2 above. \n",
+    "2. In contrast, if we know that a given language uses the \"reduplicate full signal\" strategy, we can check that it is compositional by dividing it up into chunks that each have a length corresponding to the number of meaning features (such that if forms have length 6 and there are 2 meaning features, we get 3 chunks of length 2), and subsequently checking that *within* the first such chunk of each form, we see that each substring *within* the chunk maps uniquely onto a given meaning feature, according to the rule stated in Equation 2 above. \n",
     "\n",
     "That part of the definition of what counts as a compositional language is still quite straightforward. However, there are two more tricky types of languages that could also potentially be classed as compositional:\n",
     "3. A language that uses forms of $l = 2*f$, *doesn't* use reduplication, but still has a compositional mapping from substrings to meaning features *if* you take a substring to have length $f$. For example: [aaba, aabb, baba, babb]. However, the question there is how a listener would know that that is the appropriate substring length to base their interpretation on. With the languages that use reduplication this induction process is more straightforward: first one can determine that the language uses either one or the other form of reduplication, and then based on that, one can determine whether the language is compositional. Should we assume that if all forms in the language consistently have length $l = 2*f$, but the language doesn't use either form of reduplication, we must then analyse it as substrings having length $l / f$? I.e. the longest possible substrings? \n",
@@ -895,7 +895,8 @@
     "S02aaaa.S03abab.S12ba.S13bb\n",
     "\n",
     "\n",
-    "In sum, I think we can conclude that languages of types 1, 2 and 3 should be classed as compositional, whereas languages of type 4 should not."
+    "In sum, I think we can conclude that languages of types 1, 2 and 3 should be classed as compositional, whereas languages of type 4 should not.\n",
+    "--> The complexity that is added by languages of types 3 and 4 (and the richer listener model that it requires to identify these) could be avoided however by going for Possibility 2 for extending the language model described above."
    ]
   },
   {
@@ -1044,7 +1045,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
