removed duplicate references section

--- a/evolution_compositionality_under_noise.ipynb
+++ b/evolution_compositionality_under_noise.ipynb
@@ -46,10 +46,7 @@
     "\n",
     "### Which predictions to test?\n",
     "\n",
-    "We'd like to explore both predictions, starting with the stronger one.\n",
-    "\n",
-    "### References  \n",
-    "Kirby, S., Tamariz, M., Cornish, H., & Smith, K. (2015). Compression and communication in the cultural evolution of linguistic structure. Cognition, 141, 87–102. https://doi.org/10.1016/j.cognition.2015.03.016"
+    "We'd like to explore both predictions, starting with the stronger one."
    ]
   },
   {
@@ -1591,9 +1588,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### References  \n",
+    "# References  \n",
     "Kirby, S., Tamariz, M., Cornish, H., & Smith, K. (2015). Compression and communication in the cultural evolution of linguistic structure. Cognition, 141, 87–102. https://doi.org/10.1016/j.cognition.2015.03.016"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
